--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=chatApplication
 spring.datasource.url=jdbc:mysql://localhost:3306/student
 spring.datasource.username=root
 spring.datasource.password=Iru@1234
-spring.datasource.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
